<resources>
    <string name="app_name">Calculator</string>
    <string name="btnNegPos">&#177;</string>
    <string name="btnZero">0</string>
    <string name="btnDecimal">.</string>
    <string name="btnCalculate">&#61;</string>
    <string name="btnOne">1</string>
    <string name="btnTwo">2</string>
    <string name="btnThree">3</string>
    <string name="btnAddition">&#43;</string>
    <string name="btnFour">4</string>
    <string name="btnFive">5</string>
    <string name="btnSix">6</string>
    <string name="btnSubtraction">&#8722;</string>
    <string name="btnSeven">7</string>
    <string name="btnEight">8</string>
    <string name="btnNine">9</string>
    <string name="btnMultiplication">&#215;</string>
    <string name="btnCE">CE</string>
    <string name="btnClear">C</string>
    <string name="btnRemoveDigit">&#9003;</string>
    <string name="btnDivision">&#xF7;</string>
    <string name="tvBottomDisplay">0</string>
</resources>