<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_span="4"
    android:background="#AEE5F3"
    android:textAlignment="textEnd"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|top"
        android:stretchColumns="0,1,2,3"
        tools:layout_editor_absoluteX="28dp"
        tools:layout_editor_absoluteY="0dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvTopDisplay"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="0dp"
                android:layout_span="4"
                android:background="#FFFFFF"
                android:clickable="false"
                android:textAlignment="textEnd"
                android:textColor="@color/black"
                android:textSize="30sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="100dp">

            <TextView
                android:id="@+id/tvBottomDisplay"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="0dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:layout_span="4"
                android:background="#FFFFFF"
                android:clickable="false"
                android:text="@string/tvBottomDisplay"
                android:textAlignment="textEnd"
                android:textColor="@color/black"
                android:textSize="36sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnCE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:text="@string/btnCE"
                android:textSize="36sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btnClear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:text="@string/btnClear"
                android:textSize="36sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btnRemoveDigit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:text="@string/btnRemoveDigit"
                android:textAllCaps="false"
                android:textSize="36sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btnDivision"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:text="@string/btnDivision"
                android:textSize="36sp"
                tools:ignore="ButtonStyle" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnSeven"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:text="@string/btnSeven"
                android:textSize="36sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btnEight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:text="@string/btnEight"
                android:textSize="36sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btnNine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:text="@string/btnNine"
                android:textSize="36sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btnMultiplication"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:text="@string/btnMultiplication"
                android:textSize="36sp"
                tools:ignore="ButtonStyle" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnFour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:text="@string/btnFour"
                android:textSize="36sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btnFive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:text="@string/btnFive"
                android:textSize="36sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btnSix"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:text="@string/btnSix"
                android:textSize="36sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btnSubtraction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:text="@string/btnSubtraction"
                android:textSize="36sp"
                tools:ignore="ButtonStyle" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:text="@string/btnOne"
                android:textSize="36sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btnTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:text="@string/btnTwo"
                android:textSize="36sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btnThree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:text="@string/btnThree"
                android:textSize="36sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btnAddition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:text="@string/btnAddition"
                android:textSize="36sp"
                tools:ignore="ButtonStyle" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnNegPos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:text="@string/btnNegPos"
                android:textSize="36sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btnZero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:text="@string/btnZero"
                android:textSize="36sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btnDecimal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:text="@string/btnDecimal"
                android:textSize="36sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btnCalculate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:text="@string/btnCalculate"
                android:textSize="36sp"
                tools:ignore="ButtonStyle" />
        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>